# data-101

./: Makefile  TODO.md  book-linter.sh  book.toml
expand-variables/: Cargo.toml
expand-variables/src/: main.rs
expand-variables/src/preprocessors/: mod.rs  variables.rs
src/: SUMMARY.md  foreword.md  förord.md  mottagningen.md
src/courses/: DAT037.md  DAT043.md  DAT290.md  DAT326.md  EDA322.md  EDA332.md  EDA333.md  EDA343.md  EDA452.md  EDA482.md  EEM076.md  ENM156.md  ERE103.md  MVE055.md  SSY080.md  TDA384.md  TDA555.md  TIF085.md  TMV170.md  TMV210.md  TMV216.md  index.md
src/lexicon/: people.md
src/meta/: contribute.md  update.md
src/studies/: SYV.md  faq.md  problems.md  selecting-a-master-programme.md  selecting-bachelors-courses.md  selecting-master-courses.md  selecting-non-accredited-programs.md  summary.md
src/studies/selecting-master-courses/: mpalg.md  mpcsn.md  mphpc.md
