[package]
name = "expand-variables"
version = "0.1.0"
authors = ["David Hedgren <david@hedgren.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
lazy_static = "1"
mdbook = "0.4"
regex = "1.4"
serde_json = "1"
toml = "0.5.8"
